Fix table overflow

--- a/css/_tables.scss
+++ b/css/_tables.scss
@@ -1,5 +1,7 @@
 table {
 	width: 100%;
+	display: block;
+	overflow: scroll;
 	margin-bottom: .75em;
 }
 
